import React from 'react';
// import { shallow } from 'enzyme';
// import Header from './Header';

// describe('Header', () => {
//   it('when the user is logged in Header should have only Sign Out button', () => {
//     const isLoggedIn = true
//     const component = shallow(<Header isLoggedIn={isLoggedIn} />);
//     expect(component).toMatchSnapshot();
//   });
//
//   it('when the user is not logged in Header should have Log in and Sign Up buttons', () => {
//     const isLoggedIn = false
//     const component = shallow(<Header isLoggedIn={isLoggedIn} />);
//     expect(component).toMatchSnapshot();
//   });
// });
